--- a/D00/ex01/cv.html
+++ b/D00/ex01/cv.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style>
-		h1{
-			text-align: center;
+	<style type="text/css">
+		table, th, td {
+			border: 1px solid;
 		}
-		h2{
-			color: #8c8c8c;
-		}
-		body{
-			<!-- border-style: solid; -->
-		}
-		table{
-			border-style: solid;
-		}
-		.cel1{
-			width: 40%;
-			height: ;
-			margin: 10px;
-			padding: 10px;
+		.cel {
+			background-color: #424242;
 		}
 	</style>
-	<title>CV</title>
+	<title>Mon CV</title>
 </head>
 <body>
-	<div>
-		<h1>CHRISSY JONES</h1>
-		<p>
-		Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed 	diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-		</p>
+	<h1>Persona NonGrata</h1>
+	<p>bienvenue !</p>
+	<br/>
+	<div><h3>Formation</h3></div>
+		<ul>
+			<li>trés trés trés</li>
+			<li>loin d'ici,</li>
+			<li>tu connais pas.</li>
+		</ul>
+	<div><h3>Compétences</h3></div>
+		<table style="border-collapse: collapse">
+			<tr>
+				<th>1er</th>
+				<td>tous ça</td>
+				<td>tous ça</td>
+			</tr>
+			<tr>
+				<th>2eme</th>
+				<td>tous ça</td>
+				<td>tous ça</td>
+			</tr>
+		</table>
 
-		<hr />
-	</div>
-	<div class="cel1">
-
-		<h2>FORMATIONS</h2>
-		<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.fhjkdsbfhjb</p>
-		<h2>COMPETENCES</h2>
-
-	</div>
-	<hr/>
-	<div>
-		<h2>EXPERIENCES</h2>
-	</div>
-	<div>
-	<h2>INTERETS</h2>
-	</div>
+	<div><h3>Expériences</h3></div>
+		<ol>
+			<li>par ci</li>
+			<li>par la</li>
+		</ol>
+	<div><h3>Intérêts</h3></div>
+		<table style="border-collapse: collapse">
+			<tr>
+				<th>truc</th>
+				<th>machin</th>
+			</tr>
+			<tr>
+				<td>ca</td>
+				<td class="cel">ca</td>
+			</tr>
+		</table>
 </body>
 </html>
