--- a/D00/ex01/cv.html
+++ b/D00/ex01/cv.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<h1>Persona NonGrata</h1>
-	<p>bienvenue !</p>
+	<em>bienvenue!</em>
 	<br/>
 	<div><h3>Formation</h3></div>
 		<ul>
