--- a/D00/ex05/index.html
+++ b/D00/ex05/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<script type="text/javascript" src="audio_chain.js"></script>
 	<title>index</title>
 </head>
 <body>
